github link added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
                 web site.
             </a></h3>
     </div>
+
+    <hr>
+    <p>Source Code: <a href="https://github.com/farooqalwi/Static-Website-IPT-Assignment"
+            target="_blank">farooqalwi/JStatic-Website-Assignment</a>
+    </p>
+    <p>Live Preview: <a href="https://farooqalwi.github.io/Static-Website-IPT-Assignment"
+            target="_blank">farooqalwi/JStatic-Website-Assignment</a></p>
 </body>
 
 </html>
